--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -164,6 +164,7 @@
         <%= @presenter.attribute_to_html(:division, label: "Department", render_as: :faceted) %>
         <%= @presenter.attribute_to_html(:exhibition, render_as: :faceted) %>
 
+
         <% if @presenter.in_collection_presenters.present? %>
           <tr>
             <th>Collection</th>
@@ -175,6 +176,8 @@
               </ul>
             </td>
         <% end %>
+
+        <%= @presenter.attribute_to_html(:project, render_as: :faceted) %>
 
         <%= @presenter.attribute_to_html(:series_arrangement) %>
         <%= @presenter.attribute_to_html(:physical_container) %>
