--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -14,6 +14,7 @@
 <%= presenter.attribute_to_html(:after, render_as: :faceted, search_field: 'maker_facet') %>
 <%= presenter.attribute_to_html(:printer, render_as: :faceted, search_field: 'maker_facet') %>
 <%= presenter.attribute_to_html(:printer_of_plates, render_as: :faceted, search_field: 'maker_facet') %>
+<%= presenter.attribute_to_html(:provenance) %>
 <%= presenter.attribute_to_html(:publisher, render_as: :faceted, search_field: 'maker_facet') %>
 <%= presenter.attribute_to_html(:date_of_work) %>
 <%= presenter.attribute_to_html(:date_created, render_as: :linked, search_field: 'date_created_tesim' ) %>
