--- a/app/views/records/edit_fields/_provenance.html.erb
+++ b/app/views/records/edit_fields/_provenance.html.erb
@@ -1,1 +1,1 @@
-<%= f.input :rights_holder, as: :string, required: f.object.required?(:provenance) %>
+<%= f.input :provenance, as: :string, required: f.object.required?(:provenance) %>
