--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -114,34 +114,25 @@
         <%= @presenter.attribute_to_html(:printer, render_as: :faceted, search_field: 'maker_facet') %>
         <%= @presenter.attribute_to_html(:printer_of_plates, render_as: :faceted, search_field: 'maker_facet') %>
         <%= @presenter.attribute_to_html(:publisher, render_as: :faceted, search_field: 'maker_facet') %>
+
+
         <% if @presenter.provenance&.length %>
+          <% provenance_summary, provenance_notes = @presenter.split_provenance %>
           <tr>
             <th>Provenance</th>
             <td>
-              <%=format_description(@presenter.provenance.first) %>
+              <%=format_description(provenance_summary) %>
+              <% unless provenance_notes.nil? %>
+                <a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                  Notes...
+                </a><br/>
+                <div class="collapse" id="collapseExample">
+                  <%= format_description(provenance_notes) %>
+                </div>
+              <% end %>
             </td>
           </tr>
         <% end %>
-        <% if @presenter.provenance_notes&.length %>
-          <tr>
-            <th>Provenance notes</th>
-            <%#
-            A quick-and-dirty solution for the fact that provenance notes can get really lengthy and most users
-            are only want to going to want to see the provenance info itself, not the notes.
-            This is based on:
-            https://medium.com/@beedaan/partial-collapse-with-bootstrap-3-ef4e6bf85537
-            See app/assets/stylesheets/local/attribute-table.scss
-            for the CSS.
-            %>
-            <td class="provenance_notes">
-              <p class="collapse" id="collapseExample" aria-expanded="false">
-                <%= format_description(@presenter.provenance_notes.first, truncate: false, wrapper_tag: 'span') %>
-              </p>
-              <a role="button" class="collapsed" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample"></a>
-            </td>
-          </tr>
-        <% end %>
-
 
         <%= @presenter.attribute_to_html(:date_created, render_as: :linked, search_field: 'date_created_tesim' ) %>
         <%= @presenter.attribute_to_html(:place_of_creation, render_as: :faceted, search_field: 'place_facet') %>
