More adjustments to provenance notes

--- a/app/assets/stylesheets/local/work-show.scss
+++ b/app/assets/stylesheets/local/work-show.scss
@@ -26,6 +26,9 @@
     margin-right: auto;
   }
 
+  #collapseProvenanceNotes {
+    margin-top: 1em;
+  }
 
   @media (min-width: $screen-sm-min) {
     padding: 0 15px;
