--- a/app/assets/stylesheets/local/work-show.scss
+++ b/app/assets/stylesheets/local/work-show.scss
@@ -216,6 +216,16 @@
     }
   }
 
+  .show-page-audio-playlist-wrapper {
+    vertical-align: bottom;
+    margin: $thumb-horizontal-margin $thumb-horizontal-margin ($line-height-computed * 1.5) 0;
+    .btn {
+      @extend .btn-sm;
+      border-radius: 2px;
+    }
+  }
+
+
   .show-page-audio-wrapper {
     width: ($max-image-column - ($thumb-horizontal-margin * 3)) !important;
     display: inline-block;
