--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,9 +16,14 @@
  *= require openseadragon.scss
  *
  *= require chf-overrides
- 
+ *
  *
  * Used by blacklight_range_limit
  *= require  'blacklight_range_limit'
+ *
+ * TEMOPORARY -- fold this into work-show.scss before merging.
+ * Audio player:
+ *= require playlist.css
+ *=
  *
 */
