Various front-end adjustments. css refactor; html list rather than table; merged two templates; wider audio tag; misc.

--- a/app/assets/stylesheets/local/__variables.scss
+++ b/app/assets/stylesheets/local/__variables.scss
@@ -103,3 +103,7 @@ $btn-border-radius-base:        9px !default;
 $btn-border-radius-large:       9px !default;
 $btn-border-radius-small:       9px !default;
 
+
+// Used in playlist.scss and work-show.scss
+$thumb-horizontal-margin: 4px;
+
