--- a/app/views/curation_concerns/base/_media_player.html.erb
+++ b/app/views/curation_concerns/base/_media_player.html.erb
@@ -19,10 +19,23 @@
 
     <!-- TODO : make this a list of links, not a table. -->
     <!-- TODO: if the table is more than 2 or 3 items, make it scroll and hide overflow. Don't want the PDF to go below the fold. -->
-    <table class="track-listings">
-        <%= render partial: 'media_item',
-         collection: @presenter.viewable_audio_member_presenters, as: :member %>
-    </table>
+    <ol class="track-listings">
+        <% @presenter.viewable_audio_member_presenters.each_with_index do |member, index| %>
+            <!-- TODO instead of a table, make this a list of links.  -->
+            <li class="track_listing"
+                data-title="<%= member.title.first %>"
+                data-member-id="<%= member.id %>"
+                data-mp3-url="<%= CHF::AudioDerivativeMaker.s3_url(file_set_id:member.id, file_checksum:member.representative_checksum, type_key: :standard_mp3) %>"
+                data-webm-url="<%= CHF::AudioDerivativeMaker.s3_url(file_set_id:member.id, file_checksum:member.representative_checksum, type_key: :standard_webm) %>"
+            >
+                <a class="title" title="Listen to '<%= member.title.first %>'" >
+                    <%= index + 1 %>.
+                    <%= member.title.first %>
+                </a>
+            </li>
+        <% end %>
+
+    </ol>
 </div>
 
 
