remove extraneous manual index
It was already an 'ol', plus we may not want indexes at all

--- a/app/views/curation_concerns/base/_media_player.html.erb
+++ b/app/views/curation_concerns/base/_media_player.html.erb
@@ -20,7 +20,7 @@
     <!-- TODO : make this a list of links, not a table. -->
     <!-- TODO: if the table is more than 2 or 3 items, make it scroll and hide overflow. Don't want the PDF to go below the fold. -->
     <ol class="track-listings">
-        <% @presenter.audio_playlist_presenters.each_with_index do |member, index| %>
+        <% @presenter.audio_playlist_presenters.each_with_index do |member| %>
             <!-- TODO instead of a table, make this a list of links.  -->
             <li class="track_listing"
                 data-title="<%= member.title.first %>"
@@ -29,7 +29,6 @@
                 data-webm-url="<%= CHF::AudioDerivativeMaker.s3_url(file_set_id:member.id, file_checksum:member.representative_checksum, type_key: :standard_webm) %>"
             >
                 <a class="title" title="Listen to '<%= member.title.first %>'" >
-                    <%= index + 1 %>.
                     <%= member.title.first %>
                 </a>
             </li>
