--- a/app/views/curation_concerns/base/_media_player.html.erb
+++ b/app/views/curation_concerns/base/_media_player.html.erb
@@ -1,7 +1,7 @@
 <div class="show-page-audio-playlist-wrapper">
     <div class="now_playing_container">
         <div class="now_playing_info">
-            <span class="current-track-label">Current track.</span>
+            <span class="current-track-label"></span>
 
             <a href="mp3_url"      class="mp3_download" title="Download an optimized mp3 version of this file.">
                 <span class="glyphicon glyphicon-download-alt"></span> optimized mp3
@@ -12,8 +12,8 @@
         </div>
 
         <audio controls controlsList="nodownload">
-            <source src="mp3_url "  type="audio/mpeg" />
-            <source src="webm_url"  type="audio/webm" />
+            <source src=""  type="audio/mpeg" />
+            <source src=""  type="audio/webm" />
         </audio>
     </div>
 
