--- a/app/views/curation_concerns/base/_media_player.html.erb
+++ b/app/views/curation_concerns/base/_media_player.html.erb
@@ -2,13 +2,14 @@
     <div class="now_playing_container">
         <div class="now_playing_info">
             <span class="current-track-label"></span>
-
-            <a href="mp3_url"      class="mp3_download" title="Download an optimized mp3 version of this file.">
-                <span class="glyphicon glyphicon-download-alt"></span> optimized mp3
-            </a>
-            <a href="original_url" class="original_download" title="Download the original version of this file.">
-                <span class="glyphicon glyphicon-download-alt"></span> original
-            </a>
+            <div>
+                <a href="mp3_url"      class="mp3_download" title="Download an optimized mp3 version of this file.">
+                    <span class="glyphicon glyphicon-download-alt"></span> optimized mp3
+                </a>
+                <a href="original_url" class="original_download" title="Download the original version of this file.">
+                    <span class="glyphicon glyphicon-download-alt"></span> original
+                </a>
+            </div>
         </div>
 
         <audio controls controlsList="nodownload">
