--- a/app/views/curation_concerns/base/_media_player.html.erb
+++ b/app/views/curation_concerns/base/_media_player.html.erb
@@ -1,38 +1,50 @@
 <div class="show-page-audio-playlist-wrapper">
-    <div class="now_playing_container">
-        <div class="now_playing_info">
-            <span class="current-track-label"></span>
-            <div>
-                <a href="mp3_url"      class="mp3_download" title="Download an optimized mp3 version of this file.">
-                    <span class="glyphicon glyphicon-download-alt"></span> optimized mp3
-                </a>
-                <a href="original_url" class="original_download" title="Download the original version of this file.">
-                    <span class="glyphicon glyphicon-download-alt"></span> original
-                </a>
+    <h2 class="attribute-sub-head"><%= pluralize(@presenter.audio_playlist_presenters.count, 'Sound file')%></h2>
+    <div class="show-sub-head-body">
+        <div class="now_playing_container">
+            <div class="now_playing_info">
+                <span class="current-track-label"></span>
+                <div class="btn-group">
+                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fa fa-download" aria-hidden="true"></i>  Download
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="mp3_url"      class="mp3_download" title="Download an optimized mp3 version of this file.">
+                                Optimized MP3
+                            </a>
+                        </li>
+                        <li>
+                            <a href="original_url" class="original_download" title="Download the original version of this file.">
+                                Original file
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+
+            <audio controls controlsList="nodownload">
+                <source src=""  type="audio/mpeg" />
+                <source src=""  type="audio/webm" />
+            </audio>
         </div>
 
-        <audio controls controlsList="nodownload">
-            <source src=""  type="audio/mpeg" />
-            <source src=""  type="audio/webm" />
-        </audio>
+        <ul class="track-listings list-unstyled">
+            <% @presenter.audio_playlist_presenters.each do |member| %>
+                <li class="track_listing"
+                    data-title="<%= member.title.first %>"
+                    data-member-id="<%= member.id %>"
+                    data-mp3-url="<%= CHF::AudioDerivativeMaker.s3_url(file_set_id:member.id, file_checksum:member.representative_checksum, type_key: :standard_mp3) %>"
+                    data-webm-url="<%= CHF::AudioDerivativeMaker.s3_url(file_set_id:member.id, file_checksum:member.representative_checksum, type_key: :standard_webm) %>"
+                >
+                    <a class="title" title="Listen to '<%= member.title.first %>'" href="#">
+                        <i class="fa fa-play-circle" aria-hidden="true"></i>
+                        <%= member.title.first %>
+                    </a>
+                </li>
+            <% end %>
+        </ul>
     </div>
-
-    <ul class="track-listings list-unstyled">
-        <% @presenter.audio_playlist_presenters.each do |member| %>
-            <li class="track_listing"
-                data-title="<%= member.title.first %>"
-                data-member-id="<%= member.id %>"
-                data-mp3-url="<%= CHF::AudioDerivativeMaker.s3_url(file_set_id:member.id, file_checksum:member.representative_checksum, type_key: :standard_mp3) %>"
-                data-webm-url="<%= CHF::AudioDerivativeMaker.s3_url(file_set_id:member.id, file_checksum:member.representative_checksum, type_key: :standard_webm) %>"
-            >
-                <a class="title" title="Listen to '<%= member.title.first %>'" >
-                    <%= member.title.first %>
-                </a>
-            </li>
-        <% end %>
-
-    </ul>
 </div>
 
 
