--- a/app/views/curation_concerns/base/_media_player.html.erb
+++ b/app/views/curation_concerns/base/_media_player.html.erb
@@ -25,8 +25,8 @@
             </div>
 
             <audio controls controlsList="nodownload" data-role="audio-elem" >
-                <source src=""  type="audio/mpeg"     data-role="audio-mp3-source"/>
-                <source src=""  type="audio/webm"     data-role="audio-webm-source" />
+                <source src=""  type="audio/mpeg"/>
+                <source src=""  type="audio/webm"/>
             </audio>
         </div>
         <ul class="track-listings list-unstyled" data-role="track-listings" >
