--- a/app/assets/stylesheets/local/playlist.scss
+++ b/app/assets/stylesheets/local/playlist.scss
@@ -19,8 +19,9 @@
   }
 
   .now-playing-info {
-    float: right;
     margin-bottom: $paragraph-spacer;
+    text-align: center;
+    @extend %text-font;
   }
 
   audio {
