Restore member_audio_tag presentation of actual audio players in the 'listing' for staff members only.
Accidentally removed this when I did "Remove special handling for audio files in 'downloads' menu in standard file/thumb component".

We don't really need/want this feature, but didn't mean to remove it. And don't want to think through whether removing it still gives admins the UI they need to edit things, since this one was already at least hypothetically approved.

Fixed the specs to not expect the DOWNLOAD links that we did intentionally remove.

This reverts commit 26b23ce818769a9015329ed13b168d6e25873b9f.

--- a/app/views/curation_concerns/base/_show_page_image.html.erb
+++ b/app/views/curation_concerns/base/_show_page_image.html.erb
@@ -18,10 +18,14 @@
                   class: "show-page-image",
                   data: viewer_trigger_data_attributes(parent_id: @presenter.id, member: member)) do %>
 
-      <%= member_image_tag(parent_id: @presenter.id, member: member,
-                         size_key: local_assigns[:size],
-                         lazy: (local_assigns[:lazy_after] && member_counter > local_assigns[:lazy_after] - 1))
+      <% if member.representative_content_type =~ /audio/ %>
+         <%= member_audio_tag(parent_id: @presenter.id, member: member)%>
+      <% else %>
+        <%= member_image_tag(parent_id: @presenter.id, member: member,
+                           size_key: local_assigns[:size],
+                           lazy: (local_assigns[:lazy_after] && member_counter > local_assigns[:lazy_after] - 1))
       %>
+      <% end %>
 
       <% if current_ability.current_user.staff? || member.model_name.singular.to_sym != :file_set %>
         <div class="show-page-member-title">
