--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -29,6 +29,7 @@
 <%= presenter.attribute_to_html(:extent) %>
 <%= presenter.attribute_to_html(:language, render_as: :faceted ) %>
 <%= presenter.attribute_to_html(:inscription) %>
+<%= presenter.attribute_to_html(:digitization_funder) %>
 <%= presenter.attribute_to_html(:subject, render_as: :faceted ) %>
 <%= presenter.attribute_to_html(:division, label: "Department", render_as: :faceted) %>
 <%= presenter.attribute_to_html(:exhibition) %>
