--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -162,6 +162,7 @@
         <%= @presenter.attribute_to_html(:extent) %>
         <%= @presenter.attribute_to_html(:language, render_as: :faceted ) %>
         <%= @presenter.attribute_to_html(:inscription) %>
+        <%= @presenter.attribute_to_html(:digitization_funder) %>
         <%= @presenter.attribute_to_html(:subject, render_as: :faceted ) %>
 
         <%= @presenter.attribute_to_html(:rights, render_as: :rights) %>
